--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'JetBrains Mono';
+    src: url('/fonts/JetBrainsMono.ttf') format('ttf');
+  }
+  @font-face {
+    font-family: 'JetBrains Mono Italic';
+    font-style: italic;
+    src: url('/fonts/JetBrainsMono-Italic.ttf') format('ttf');
+  }
+}
